syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.akbank.model";
message HiRequest{
  string message = 1;
}

message HiResponse {
  string result = 1;
}


service ContentService {
  rpc sayHi(HiRequest) returns (HiResponse);
}